--- a/android/src/main/res/layout/console_item.xml
+++ b/android/src/main/res/layout/console_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    tools:context="com.ariasaproject.cmls"
+    tools:context="com.ariasaproject.poolminerlite"
     android:orientation="horizontal" >
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text1"
