add console variation color

--- a/android/src/main/res/values-night/colors.xml
+++ b/android/src/main/res/values-night/colors.xml
@@ -13,6 +13,12 @@
     <color name="oposite">#FFFFFF</color>
     <color name="base">#000000</color>
     
-    <color name="background_start">#00B000</color>
+    <color name="background_start">#006000</color>
     <color name="background_end">#000000</color>
+    
+    <color name="console_text_debug">#A0A0A0</color>
+    <color name="console_text_info">#FFFFFF</color>
+    <color name="console_text_success">#27AE60</color>
+    <color name="console_text_warning">#F1C40F</color>
+    <color name="console_text_error">#E74C3C</color>
 </resources>
