--- a/android/src/main/res/values/colors.xml
+++ b/android/src/main/res/values/colors.xml
@@ -16,6 +16,14 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     
-    <color name="background_start">#6FFF6F</color>
+    <color name="background_start">#AFFFAF</color>
     <color name="background_end">#FFFFFF</color>
+    
+    <color name="console_text_debug">#606060</color>
+    <color name="console_text_info">#000000</color>
+    <color name="console_text_success">#27AE60</color>
+    <color name="console_text_warning">#F1C40F</color>
+    <color name="console_text_error">#E74C3C</color>
+    
+    
 </resources>
