--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -261,15 +261,16 @@
         app:layout_constraintTop_toBottomOf="@id/console_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toStartOf="@id/console_msg"
         android:layout_width="0dp"
         android:layout_height="0dp" />
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/console_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/console_label"
+        app:layout_constraintTop_toBottomOf="@id/console_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="textMultiline"
         android:text="None" />
 </androidx.constraintlayout.widget.ConstraintLayout>
