--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -271,6 +271,6 @@
         app:layout_constraintTop_toBottomOf="@id/console_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:inputType="textMultiline"
+        android:inputType="textMultiLine"
         android:text="None" />
 </androidx.constraintlayout.widget.ConstraintLayout>
