--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="6dp" >
 		<androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,26 +14,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
-				
-		    <com.google.android.material.tabs.TabLayout
+
+				<LinearLayout
+						android:orientation="horizontal"
+						android:gravity="center"
 		        android:layout_width="match_parent"
-		        android:layout_height="wrap_content"
-		        android:id="@+id/tab_layout"
-		        android:background="@color/base"
-		        app:tabInlineLabel="true"
-		        app:tabTextColor="@color/oposite"
-		        app:tabIndicatorColor="@color/colorAccent"
-		        app:tabSelectedTextColor="@color/colorAccent"
-		        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small">
-		    		<com.google.android.material.tabs.TabItem
-								android:text="One"/>
-		    		<com.google.android.material.tabs.TabItem
-								android:text="Two"/>
-		    		<com.google.android.material.tabs.TabItem
-								android:text="Three"/>
-		    </com.google.android.material.tabs.TabLayout>
+		        android:layout_height="wrap_content" >
+					
+				    <androidx.appcompat.widget.AppCompatButton
+				        android:layout_width="wrap_content"
+				        android:layout_weight="0"
+				        android:layout_height="wrap_content"
+				        android:text="Chat" />
+		        <androidx.appcompat.widget.AppCompatTextView
+		            style="@style/AppTheme.Toolbar.Title"
+		            android:layout_width="match_parent"
+				        android:layout_weight="1"
+		            android:layout_height="wrap_content"
+		            android:text="@string/app_name" />
+				    <androidx.appcompat.widget.AppCompatButton
+				        android:layout_width="wrap_content"
+				        android:layout_weight="0"
+				        android:layout_height="wrap_content"
+				        android:text="Config" />
+
+				</LinearLayout>
+
 		</androidx.appcompat.widget.Toolbar>
-		
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/input_container"
         android:layout_width="match_parent"
@@ -113,7 +121,7 @@
                 android:text="1234" />
         </com.google.android.material.textfield.TextInputLayout>
         <androidx.appcompat.widget.AppCompatSeekBar
-            style="@style/OwnSeekBar"
+            style="@style/AppTheme.SeekBar"
             android:id="@+id/cpuSeek"
             android:min="1"
             app:layout_constraintHeight="default"
