--- a/android/src/main/res/values-night/styles.xml
+++ b/android/src/main/res/values-night/styles.xml
@@ -11,5 +11,9 @@
     <style name="BaseTheme.Toolbar" parent="ThemeOverlay.AppCompat.ActionBar" >
     	
     </style>
+    
+    <style name="BaseTheme.Toolbar.Title" parent="ThemeOverlay.AppCompat.ActionBar.Title" >
+    	
+    </style>
 
 </resources>
