--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -19,10 +19,20 @@
     		
     </style>
     
-    <style name="OwnSeekBar" parent="Widget.AppCompat.SeekBar">
+    <style name="BaseTheme.Toolbar.Title" parent="ThemeOverlay.AppCompat.Dark.ActionBar.Title">
+    		
+    </style>
+    <style name="AppTheme.Toolbar.Title" parent="BaseTheme.Toolbar.Title">
+    		
+    </style>
+    
+    <style name="BaseTheme.SeekBar" parent="Widget.AppCompat.SeekBar">
         <item name="android:progressDrawable">@drawable/seekbar_progress_style</item>
         <item name="android:thumb">@drawable/seekbar_thumb</item>
         <item name="android:splitTrack">false</item>
     </style>
+    <style name="AppTheme.SeekBar" parent="BaseTheme.SeekBar">
+    </style>
+    
 
 </resources>
