--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
 				        android:layout_height="wrap_content"
 				        android:text="Chat" />
 		        <androidx.appcompat.widget.AppCompatTextView
-		            style="@style/AppTheme.Toolbar.Title"
+		            android:textAppearance="@style/AppTheme.Toolbar.Title"
 		            android:layout_width="match_parent"
 				        android:layout_weight="1"
 		            android:layout_height="wrap_content"
