--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     		
     </style>
     
-    <style name="BaseTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Widget.DarkActionBar.Title">
+    <style name="BaseTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Widget.Dark.ActionBar.Title">
     		
     </style>
     <style name="AppTheme.Toolbar.Title" parent="BaseTheme.Toolbar.Title">
