--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="6dp" >
+
 		<androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:theme="@style/AppTheme.Toolbar"
@@ -15,289 +16,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
 
-				<LinearLayout
-						android:orientation="horizontal"
-						android:gravity="center"
+		    <com.google.android.material.tabs.TabLayout
+		        android:id="@+id/tabLayout"
 		        android:layout_width="match_parent"
-		        android:layout_height="wrap_content" >
-					
-				    <androidx.appcompat.widget.AppCompatButton
-				        android:layout_width="wrap_content"
-				        android:layout_weight="0"
-				        android:layout_height="wrap_content"
-				        android:text="Chat" />
-		        <androidx.appcompat.widget.AppCompatTextView
-		            android:textAppearance="@style/AppTheme.Toolbar.Title"
-		            android:layout_width="match_parent"
-				        android:layout_weight="1"
-		            android:layout_height="wrap_content"
-		            android:text="@string/app_name" />
-				    <androidx.appcompat.widget.AppCompatButton
-				        android:layout_width="wrap_content"
-				        android:layout_weight="0"
-				        android:layout_height="wrap_content"
-				        android:text="Config" />
-
-				</LinearLayout>
+		        android:layout_height="wrap_content">
+		    </com.google.android.material.tabs.TabLayout>
 
 		</androidx.appcompat.widget.Toolbar>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/input_container"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" >
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/server_container"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintWidth_percent="0.8"
-            app:helperText="@string/mtxt_helperinputserver"
-            app:helperTextTextColor="@android:color/holo_red_dark"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:hint="Pool Server">
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/server_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:inputType="textUri"
-                android:text="us2.litecoinpool.org" />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/port_container"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:helperText="@string/mtxt_helperinputport"
-                app:helperTextTextColor="@android:color/holo_red_dark"
-                app:layout_constraintWidth_percent="0.2"
-                app:layout_constraintStart_toEndOf="@id/server_container"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:hint="Pool Port">
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/port_et"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:inputType="number"
-                    android:text="3333" />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/user_container"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintWidth_percent="0.5"
-            app:layout_constraintTop_toBottomOf="@id/server_container"
-            app:layout_constraintStart_toStartOf="parent"
-            android:hint="Username">
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/user_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:inputType="textUri"
-                android:text="Ariasa.test" />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/pass_container"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintWidth_percent="0.5"
-            app:layout_constraintTop_toBottomOf="@id/port_container"
-            app:layout_constraintStart_toEndOf="@id/user_container"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:passwordToggleEnabled="true"
-            android:hint="Password">
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/password_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:inputType="textPassword"
-                android:text="1234" />
-        </com.google.android.material.textfield.TextInputLayout>
-        <androidx.appcompat.widget.AppCompatSeekBar
-            style="@style/AppTheme.SeekBar"
-            android:id="@+id/cpuSeek"
-            android:min="1"
-            app:layout_constraintHeight="default"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintWidth="spread"
-            app:layout_constraintTop_toBottomOf="@id/user_container"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/cpu_usage_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/cpu_usage_view"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/pass_container"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/cpuSeek"
-            android:text="0 Thread Usage" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/status_container"
-        android:layout_margin="2dp"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/input_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" >
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:id="@+id/show_userInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:singleLine="false"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="Pool Mining Information" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:id="@+id/speed_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/show_userInput"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/mtxt_labelspeed" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:id="@+id/speed_tv"
-            app:layout_constraintTop_toBottomOf="@id/show_userInput"
-            app:layout_constraintStart_toEndOf="@id/speed_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="0,000 Hash/Sec" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:id="@+id/result_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/speed_label"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="Result:" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintTop_toBottomOf="@id/speed_label"
-            app:layout_constraintStart_toEndOf="@id/result_label"
-            android:id="@+id/resulta_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:textColor="@android:color/holo_green_dark"
-            android:layout_gravity="right"
-            android:text="000" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintTop_toBottomOf="@id/speed_label"
-            app:layout_constraintStart_toEndOf="@id/resulta_tv"
-            android:id="@+id/resulta_tv_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:text=" Accepted then " />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintTop_toBottomOf="@id/speed_label"
-            app:layout_constraintStart_toEndOf="@id/resulta_tv_label"
-            android:id="@+id/resultr_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:textColor="@android:color/holo_red_dark"
-            android:layout_gravity="right"
-            android:text="000" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintTop_toBottomOf="@id/speed_label"
-            app:layout_constraintStart_toEndOf="@id/resultr_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/resultr_tv_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:text=" Rejected" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:id="@+id/information_label"
-            app:layout_constraintTop_toBottomOf="@id/result_label"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Information:" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:id="@+id/extra_tv"
-            app:layout_constraintTop_toBottomOf="@id/result_label"
-            app:layout_constraintStart_toEndOf="@id/information_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No Information" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    
-    <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/settings_checkBox_keepscreenawake"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/status_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/mtxt_labelkeepscreenawake" />
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_startmine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:enabled="false"
-        android:background="@drawable/button_start_mine"
-        android:onClick="toStartMining"
-        app:layout_constraintTop_toBottomOf="@id/settings_checkBox_keepscreenawake"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/mbtn_startmine" />
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_stopmine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:enabled="false"
-        android:background="@drawable/button_stop_mine"
-        android:onClick="toStopMining"
-        app:layout_constraintTop_toBottomOf="@id/button_startmine"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/mbtn_stopmine" />
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/console_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/button_stopmine"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Console:" />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/console_view"
-        app:layout_constraintTop_toBottomOf="@id/console_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp" />
-        
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" >
+
 </androidx.constraintlayout.widget.ConstraintLayout>
