--- a/android/src/main/res/layout/fragment_news.xml
+++ b/android/src/main/res/layout/fragment_news.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="Parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:text="News" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
