--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -15,12 +15,32 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
+				<LinearLayout
+						android:layout_width="match_parent"
+        		android:layout_height="wrap_content">
 
-		    <com.google.android.material.tabs.TabLayout
-		        android:id="@+id/tabLayout"
-		        android:layout_width="match_parent"
-		        android:layout_height="wrap_content">
-		    </com.google.android.material.tabs.TabLayout>
+		        <androidx.appcompat.widget.AppCompatTextView
+		            android:id="@+id/cpu_usage_view"
+		            android:textAppearance="@style/AppTheme.Toolbar.Title"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:text="@string/app_name" />
+
+						
+
+				    <com.google.android.material.tabs.TabLayout
+				        android:id="@+id/tabLayout"
+				        android:layout_width="match_parent"
+				        android:layout_height="wrap_content">
+				    		<com.google.android.material.tabs.TabItem
+		            		android:text="Chat"/>
+				    		<com.google.android.material.tabs.TabItem
+		            		android:text="Main"/>
+				    		<com.google.android.material.tabs.TabItem
+		            		android:text="Chat"/>
+				    </com.google.android.material.tabs.TabLayout>
+
+				</LinearLayout>
 
 		</androidx.appcompat.widget.Toolbar>
 
