--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="6dp" >
+    android:layout_height="match_parent">
 
 		<androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -21,13 +20,10 @@
         		android:layout_height="wrap_content">
 
 		        <androidx.appcompat.widget.AppCompatTextView
-		            android:id="@+id/cpu_usage_view"
 		            android:textAppearance="@style/AppTheme.Toolbar.Title"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:text="@string/app_name" />
-
-						
 
 				    <com.google.android.material.tabs.TabLayout
 				        android:id="@+id/tabLayout"
@@ -38,7 +34,7 @@
 				    		<com.google.android.material.tabs.TabItem
 		            		android:text="Main"/>
 				    		<com.google.android.material.tabs.TabItem
-		            		android:text="Chat"/>
+		            		android:text="Config"/>
 				    </com.google.android.material.tabs.TabLayout>
 
 				</LinearLayout>
@@ -49,6 +45,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+    		android:padding="6dp" 
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
