--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+		android:orientation="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
 
 		<androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:theme="@style/AppTheme.Toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" >
+        android:layout_height="wrap_content" >
+
 				<LinearLayout
 						android:orientation="vertical"
 						android:layout_width="match_parent"
@@ -21,34 +20,31 @@
 
 		        <androidx.appcompat.widget.AppCompatTextView
 		            android:textAppearance="@style/AppTheme.Toolbar.Title"
-		            android:layout_width="wrap_content"
+		            android:layout_width="match_parent"
 		            android:layout_height="wrap_content"
 		            android:text="@string/app_name" />
 
-				    <com.google.android.material.tabs.TabLayout
-				        android:id="@+id/tabLayout"
-				        android:layout_width="match_parent"
-				        android:layout_height="wrap_content">
-				    		<com.google.android.material.tabs.TabItem
-		            		android:text="Chat"/>
-				    		<com.google.android.material.tabs.TabItem
-		            		android:text="Main"/>
-				    		<com.google.android.material.tabs.TabItem
-		            		android:text="Config"/>
-				    </com.google.android.material.tabs.TabLayout>
 
 				</LinearLayout>
 
 		</androidx.appcompat.widget.Toolbar>
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    		<com.google.android.material.tabs.TabItem
+        		android:text="Chat"/>
+    		<com.google.android.material.tabs.TabItem
+        		android:text="Main"/>
+    		<com.google.android.material.tabs.TabItem
+        		android:text="Config"/>
+    </com.google.android.material.tabs.TabLayout>
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    		android:padding="6dp" 
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    		android:padding="6dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
