--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -16,14 +16,14 @@
     		
     </style>
     <style name="AppTheme.Toolbar" parent="BaseTheme.Toolbar">
-        <item name="android:background">?attr/colorPrimary</item>
+        <item android:background>?android:attr/colorPrimary</item>
     </style>
     
     <style name="BaseTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
     		
     </style>
     <style name="AppTheme.Toolbar.Title" parent="BaseTheme.Toolbar.Title">
-        <item name="android:textColor">?attr/textColorPrimary</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
     <style name="AppTheme.SeekBar" parent="Widget.AppCompat.SeekBar">
