--- a/android/src/main/res/layout/console_item.xml
+++ b/android/src/main/res/layout/console_item.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:id="@+id/console_item_root"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true" >
+    android:layout_height="wrap_content" >
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:clickable="false"
-        android:focusable="false"
         android:gravity="top"/>
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text2"
@@ -24,28 +19,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/text1"
         app:layout_constraintEnd_toEndOf="parent"
-        android:clickable="false"
-        android:focusable="false"
-        android:gravity="top|left"/>
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text2"
-        app:layout_constraintStart_toEndOf="@id/text1"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:clickable="false"
-        android:focusable="false"
-        android:visibility="gone"
         android:gravity="top|left"/>
     <View 
         android:layout_width="match_parent"
         android:layout_height=".5dp"
         android:background="@color/opositeTransparent"
-        app:layout_constraintTop_toBottomOf="@id/text3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-    		android:clickable="false"
-        android:focusable="false" />
+        app:layout_constraintTop_toBottomOf="@id/text2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
