--- a/android/src/main/res/layout/console_item.xml
+++ b/android/src/main/res/layout/console_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:id="@+id/console_item_root"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content" >
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text1"
