--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -22,18 +22,31 @@
 		            android:textAppearance="@style/AppTheme.Toolbar.Title"
 		            android:layout_width="match_parent"
 		            android:layout_height="wrap_content"
+		            android:gravity="center"
+		            android:padding="5dp"
 		            android:text="@string/app_name" />
 
 				    <com.google.android.material.tabs.TabLayout
+				    		style="@style/AppTheme.TabLayout"
 				        android:id="@+id/tabLayout"
+				        app:tabMode="fixed"
+				        app:tabGravity="fill"
+				        app:tabRippleColor="@null"
+				        app:tabIndicatorColor="?android:attr/colorPrimaryDark"
+				        app:tabIndicatorAnimationMode="elastic"
 				        android:layout_width="match_parent"
-				        android:layout_height="wrap_content">
+				        android:layout_height="wrap_content"
+		            android:padding="5dp" >
+
 				    		<com.google.android.material.tabs.TabItem
 				        		android:text="Chat"/>
+
 				    		<com.google.android.material.tabs.TabItem
 				        		android:text="Main"/>
+
 				    		<com.google.android.material.tabs.TabItem
 				        		android:text="Config"/>
+
 				    </com.google.android.material.tabs.TabLayout>
 
 				</LinearLayout>
