--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
     <style name="BaseTheme" parent="Theme.AppCompat.Light">
         <item name="android:textColorPrimary">#FF0F0F0F</item>
-        <item name="android:colorPrimary">#FFFFFFFF</item>
-        <item name="android:colorPrimaryDark">#FF333333</item>
-        <item name="android:colorAccent">#FF259024</item>
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
         <item name="android:textColor">#FF050505</item>
     </style>
     <style name="AppTheme" parent="BaseTheme">
@@ -20,10 +20,15 @@
     </style>
     
     <style name="BaseTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-    		
     </style>
     <style name="AppTheme.Toolbar.Title" parent="BaseTheme.Toolbar.Title">
         <item name="android:textColor">?android:attr/textColorPrimary</item>
+    		<item name="android:shadowColor">?android:attr/textColorPrimary</item>
+		    <item name="android:shadowRadius">3</item>
+    </style>
+    
+    <style name="AppTheme.TabLayout" parent="Widget.Design.TabLayout">
+    
     </style>
 
     <style name="AppTheme.SeekBar" parent="Widget.AppCompat.SeekBar">
