--- a/android/src/main/res/values-night/colors.xml
+++ b/android/src/main/res/values-night/colors.xml
@@ -12,6 +12,11 @@
     <color name="oposite">#FFFFFF</color>
     <color name="base">#000000</color>
     
-    <color name="background_start">#006000</color>
+    <color name="colorPrimaryDark">#050A30</color>
+    <color name="colorPrimary">#000C66</color>
+    <!-- 0000FF-->
+    <color name="colorAccent">#7EC8E3</color>
+    
+    <color name="background_start">#0000FF</color>
     <color name="background_end">#000000</color>
 </resources>
