--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
     <style name="BaseTheme" parent="Theme.AppCompat.Light">
-        <item name="android:textColorPrimary">#FF0F0F0F</item>
+        <item name="android:textColorPrimary">#000000</item>
         <item name="android:colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">#FF050505</item>
+        <item name="android:textColor">#000000</item>
     </style>
     <style name="AppTheme" parent="BaseTheme">
         <item name="android:windowBackground">@drawable/main_background</item>
