--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
 
 		<androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:theme="@style/AppTheme.Toolbar"
+        style="@style/AppTheme.Toolbar"
+        android:layout_marginBottom="55dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -24,6 +25,8 @@
 		            android:layout_height="wrap_content"
 		            android:gravity="center"
 		            android:padding="5dp"
+		            android:layout_marginTop="24dp"
+		            android:layout_marginBottom="24dp"
 		            android:text="@string/app_name" />
 
 				    <com.google.android.material.tabs.TabLayout
