--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -1,12 +1,14 @@
 <resources>
     <style name="BaseTheme" parent="Theme.AppCompat.Light">
-        <item name="android:textColorPrimary">#000000</item>
-        <item name="android:colorPrimary">@color/colorPrimary</item>
-        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">#000000</item>
     </style>
     <style name="AppTheme" parent="BaseTheme">
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
+        
         <item name="android:windowBackground">@drawable/main_background</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -16,19 +18,19 @@
     		
     </style>
     <style name="AppTheme.Toolbar" parent="BaseTheme.Toolbar">
-        <item name="android:background">?android:attr/colorPrimary</item>
+        <item name="android:background">@color/colorPrimary</item>
     </style>
     
     <style name="BaseTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
     </style>
     <style name="AppTheme.Toolbar.Title" parent="BaseTheme.Toolbar.Title">
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-    		<item name="android:shadowColor">?android:attr/textColorPrimary</item>
-		    <item name="android:shadowRadius">3</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
     </style>
     
     <style name="AppTheme.TabLayout" parent="Widget.Design.TabLayout">
-    
+    		
+        <item name="android:background">@drawable/tablayout_background</item>
+        <item name="app:tabIndicatorColor">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.SeekBar" parent="Widget.AppCompat.SeekBar">
